item by id controller

--- a/back/appsettings.json
+++ b/back/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Db": ""
+    "Db": "mongodb+srv://sa4248:Shpendi1234#@im.qanzqjw.mongodb.net/?retryWrites=true&w=majority"
   }
 }
